<resources>
    <string name="app_name">FirebaseAuth Example</string>
    <string name="signin_with_google">Sign in with Google</string>
    <string name="signin_with_facebook">Sign in with Facebook</string>
    <string name="signin_with_twitter">Sign in with Twitter</string>
    <string name="signin_with_github">Sign in with Github</string>
    <string name="signin_with_yahoo">Sign in with Yahoo</string>
    <string name="signin_with_email">Sign in with Email</string>
    <string name="signin_with_mslive">Sign in with MSLive</string>
    <string name="signin_with_play_games">Sign in with Play Games</string>
    <string name="signin_with_phone">Sign in with Phone</string>

    <string name="phone_no_description" translatable="false">Enter your Mobile number</string>
    <string name="india_country_code" translatable="false">+91</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="next" translatable="false">Next</string>
    <string name="phone_auth_verif">Tap Next to verify your phone number. You need to manually enter verification code to next screen</string>
    <string name="code_sent_to">Enter code that was sent to</string>
    <string name="didnot_get_code">I didn\'t get a code</string>



</resources>
