<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_phone_number_input_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/signin_with_phone"
                android:src="@drawable/phone_auth_cover" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:text="@string/phone_no_description"
                    android:textColor="@color/black_medium_emphasis"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/ll_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_description"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight=".9"
                        android:text="@string/india_country_code"
                        android:textColor="@color/black_medium_emphasis"
                        android:textSize="18sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:layout_weight=".1"
                            app:boxStrokeColor="@color/blueberry">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tiet_mobile_number"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="@color/blueberry"
                                android:hint="@string/mobile_number"
                                android:inputType="number"
                                android:singleLine="true"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_send_verification"
                    android:layout_width="200dp"
                    android:layout_height="65dp"
                    android:layout_below="@+id/ll_phone_number"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/blueberry"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:text="@string/phone_auth_verif"
                    android:textColor="@color/black_low_emphasis"
                    android:textSize="12sp"
                    android:layout_below="@+id/btn_send_verification"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_otp_verification_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blueberry"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="6dp"
                android:paddingTop="16dp"
                android:text="@string/code_sent_to"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/signin_with_phone"
                android:textColor="@color/fiery_rose" />

            <com.example.firebaseauthexample.customview.OTPView.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:textColor="#ffffff"
                app:bar_active_color="@color/white"
                app:bar_enabled="true"
                app:bar_error_color="@color/red"
                app:bar_height="1.5dp"
                app:bar_inactive_color="@color/whiteoff"
                app:bar_margin_bottom="0dp"
                app:bar_margin_left="2dp"
                app:bar_margin_right="2dp"
                app:bar_success_color="@color/green"
                app:box_margin="0dp"
                app:height="40dp"
                app:length="6"
                app:otp=""
                app:otp_text_size="14sp"
                app:width="40dp" />

            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_marginTop="150dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/didnot_get_code"
                android:textColor="@color/gargoyle_das" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>